--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webdev-capstone",
   "version": "0.1.0",
+  "main": "./server/index.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,12 +24,14 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.50.1",
     "sequelize": "^6.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "node ./server/index.js && npm build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
